# friendly-telegram

./: .gitignore  404.html  BRANCH_STRUCTURE.md  DESIGN_GUIDE.md  INDEX.md  MERGE_CONFLICT_ANALYSIS.md  MERGE_CONFLICT_RESOLUTION_GUIDE.md  README.md  README_COMPARISON.md  SUMMARY.md  about.html  auth.js  contact.html  home.html  index.html  insights.html  login.html  main.py  manifest.json  offline.html  portfolio.html  privacy-policy.html  process.html  pyproject.toml  script.js  service-area.html  services.html  signup.html  styles.css  sw.js  test-pwa.js  tos.html  vercel.json
.github/workflows/: ci.yml
api/: __init__.py  contact.js  contact.py  health.js
api/auth/: login.js  me.js  register.js
assets/images/: README.md
backend/: .env.example  .gitignore  API_ENDPOINTS.md  QUICKSTART.md  README.md  SECURITY.md  requirements-dev.txt  requirements.txt  seed_data.py  test_api.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/tests/: conftest.py  test_admin.py  test_appointments.py  test_auth.py  (+9 more)
frontend/: README.md  about.html  auth.js  config.js  contact.html  dashboard.css  dashboard.html  dashboard.js  home.html  index.html  insights.html  login.html  manifest.json  offline.html  privacy-policy.html  process.html  script.js  service-area.html  services.html  signup.html  styles.css  sw.js  vercel.json
node-backend/: .env.example  package-lock.json  package.json  server.js
public/: contact.html  index.html  manifest.json  privacy-policy.html  property-check-guide.docx  script.js
tests/: conftest.py  test_api_contact.py
(+65 files in other folders)
